<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/single_pokemon_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pokecard"
        android:layout_marginTop="125dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layoutDirection="ltr">

            <View
                android:id="@+id/detail_1"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:background="@color/grey"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/single_pokemon_id"
                />

            <TextView
                android:id="@+id/single_pokemon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_id"
                android:textAlignment="center"
                android:padding="5dp"
                android:textSize="25sp"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <View
                android:id="@+id/detail_2"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:background="@color/grey"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/single_pokemon_id"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/layout_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_type"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_id"
            />

        <TextView
            android:id="@+id/single_pokemon_type_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/pokemon_placeholder_type"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/layout_type"
            app:layout_constraintTop_toBottomOf="@id/layout_id"
            />

        <TextView
            android:id="@+id/single_pokemon_type_2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/pokemon_placeholder_type"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/single_pokemon_type_1"
            app:layout_constraintTop_toBottomOf="@id/layout_id"
            />

        <TextView
            android:id="@+id/single_pokemon_base_stats"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_base_stats"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/single_pokemon_type_1"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="6"
            android:columnCount="2"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/single_pokemon_base_stats"
            >

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_hp"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_hp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_attack"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_attack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_defense"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_defense"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_sp_attack"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_sp_attack"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_sp_defense"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_sp_def"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/pokemon_speed"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/single_pokemon_speed"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pokemon_stat"
                android:textSize="25sp"
                />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/single_pokemon_image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>